smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/set-empty-members.smithy
// Missing required member of shape `com.foo#MySet`: member
namespace com.foo

set MySet {}
